--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "react-component-gulp-tasks",
-  "version": "0.7.7",
-  "description": "Gulp Build Tasks for React Component Projects",
+  "name": "fritz-c-gulp-tasks",
+  "version": "0.0.1",
+  "description": "Gulp Build Tasks",
   "main": "index.js",
   "author": "Jed Watson",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JedWatson/react-component-gulp-tasks.git"
+    "url": "https://github.com/fritz-c/react-component-gulp-tasks.git"
   },
   "dependencies": {
     "aliasify": "^1.7.2",
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.5.2",
     "babel-plugin-object-assign": "^1.2.1",
-    "babelify": "^6.3.0",
-    "brfs": "^1.4.1",
-    "browserify": "^11.1.0",
-    "browserify-shim": "^3.8.10",
-    "camelcase": "^1.2.1",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "camelcase": "^2.1.0",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.1",
     "defaults": "^1.0.2",
-    "del": "^2.0.2",
-    "gulp-babel": "^5.2.1",
-    "gulp-bump": "^0.3.1",
-    "gulp-connect": "^2.2.0",
-    "gulp-gh-pages": "^0.5.2",
-    "gulp-git": "^1.4.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
@@ -38,10 +30,16 @@
     "watchify": "^3.4.0"
   },
   "devDependencies": {
-    "happiness": "*"
+    "autoprefixer": "^6.3.3",
+    "babel-preset-react": "^6.5.0",
+    "cssnano": "^3.5.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.1.0",
+    "happiness": "*",
+    "minimist": "^1.2.0"
   },
   "peerDependencies": {
-    "gulp": "^3.8.0"
+    "gulp": "^3.9.1"
   },
   "scripts": {
     "lint": "happiness",
